[package]
name = "robin"
version = "0.0.0"
authors = ["Edward Kmett <ekmett@gmail.com>"]
description = "data carousel"
repository = "https://github.com/ekmett/robin"
edition = "2018"

[dependencies]
rand = "0.6.5"
raptorq = { path = "raptorq", version = "1.2.0" }
serde = "1.0.104"
serde_cbor = "0.11.1"
sha2 = "0.8.1"
